<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarAlimento">

     <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="200dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sansationbold"
            android:text="@string/txtSeleccionarComida"
            android:textAlignment="center"
            android:textColor="@color/colornombreapp"
            android:textSize="40sp" />

        <AutoCompleteTextView
            android:id="@+id/txtBusqueda"
            style="@style/AutoCompleteTextViewStyle"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext_bg"
            android:completionThreshold="1"
            android:hint="@string/hintBuscar"

            android:textColor="@color/black"
            android:textColorHint="@color/botones" />

        <EditText
            android:id="@+id/txtpeso"
            android:background="@drawable/rounded_edittext_bg"
            android:layout_marginTop="10dp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="@font/sansationbold"
            android:hint="@string/hintPeso"
            android:textColorHint="@color/botones"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/txtAgregar"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLinearLayout" />

    <!-- Botón Regresar -->
    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/txtRegresar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/space"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textirbasededatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sansationbold"
        android:foregroundGravity="bottom"
        android:text="@string/btn_ir_basedeDatos"
        android:textColor="@color/botones"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>