<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicarSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sansationbold"
            android:text="@string/txtInicarSesion"
            android:textAlignment="center"
            android:textColor="@color/colornombreapp"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/Emailinicar"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_bg"
            android:ems="10"
            android:fontFamily="@font/sansationbold"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/botones" />

        <EditText
            android:id="@+id/continiciar"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_bg"
            android:ems="10"
            android:fontFamily="@font/sansationbold"
            android:hint="@string/hintContrasena"
            android:inputType="numberPassword"
            android:textColorHint="@color/botones" />

        <Button
            android:id="@+id/btnpageInicar"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:onClick="iniciarSesion"
            android:text="@string/btn_inicarsesion"
            android:textColor="#FFFFFF" />

    </LinearLayout>
    <TextView
        android:id="@+id/textiraregitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sansationbold"
        android:foregroundGravity="bottom"
        android:text="@string/btn_ir_registrarse"
        android:textColor="@color/botones"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>