<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sansationbold"
            android:text="@string/txtRegistrar"
            android:textAlignment="center"
            android:textColor="@color/colornombreapp"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/nombreRegistro"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext_bg"
            android:ems="10"
            android:fontFamily="@font/sansationbold"
            android:hint="@string/hintName"
            android:inputType="text"
            android:textColorHint="@color/botones"
            android:layout_marginVertical="10dp"/>


        <EditText
            android:id="@+id/emailpageregistro"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext_bg"
            android:fontFamily="@font/sansationbold"
            android:textColorHint="@color/botones"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/cont1pageregistro"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/hintContrasena"
            android:inputType="numberPassword"
            android:background="@drawable/rounded_edittext_bg"
            android:fontFamily="@font/sansationbold"
            android:textColorHint="@color/botones"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/cont2pageregistro"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/hintContrasena"
            android:inputType="numberPassword"
            android:background="@drawable/rounded_edittext_bg"
            android:fontFamily="@font/sansationbold"
            android:textColorHint="@color/botones"
            android:layout_marginVertical="10dp"/>

        <Button
            android:id="@+id/btnpageRegistro"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_button"
            android:onClick="registrarUsuario"
            android:text="@string/btn_registrarse"
            android:textColor="#FFFFFF"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/textiraregitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansationbold"
        android:text="@string/btn_ir_inicarsesion"
        android:textColor="@color/botones"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>