<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="280dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAlimentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="center"
                android:textColor="@color/colornombreapp"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/btnEliminar"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VCarbohidratos"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtcarbohidratos"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VColesterol"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtcolesterol"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp" />


        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VEnergia"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtenergia"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VGsaturadas"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtgsaturadas"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VLipidos"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/txtlipidos"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VProteina"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/txtproteinas"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp"  />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:text="@string/VSodio"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtsodio"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansationbold"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>


        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@drawable/divider_line" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>